import "aurora/account_types.proto";
import "aurora/report_types.proto";
import "aurora/rpc_types.proto";

package blizzard.protocol.report.v1;

option cc_generic_services = false;

message SendReportRequest {
	option (message_options).custom_validator = true;
	required .blizzard.protocol.report.v1.Report report = 1;
	optional uint32 program = 2;
}

message SubmitReportRequest {
	option (message_options).custom_validator = true;
	optional .blizzard.protocol.account.v1.GameAccountHandle agent_id = 1;
	optional .blizzard.protocol.report.v1.ReportType report_type = 2;
	optional uint32 program = 3;
}

service ReportService {
	option (service_options).descriptor_name = "bnet.protocol.report.ReportService";
	option (service_options).shard_name = "report";
	option (sdk_service_options).outbound = true;
	rpc SendReport (.blizzard.protocol.report.v1.SendReportRequest) returns (.blizzard.protocol.NoData) {
		option (method_options).id = 1;
	}
	rpc SubmitReport (.blizzard.protocol.report.v1.SubmitReportRequest) returns (.blizzard.protocol.NoData) {
		option (method_options).id = 2;
	}
}

